--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "combine-coverage": "istanbul-combine packages/*/coverage/coverage.json",
+    "combine-coverage": "istanbul-combine packages/*/coverage/coverage*.json",
     "coveralls": "cat ./coverage/lcov.info | coveralls -v",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,6 +36,8 @@
     "istanbul": "^0.4.1",
     "istanbul-combine": "^0.3.0",
     "mocha": "^5.1.1",
+    "nyc": "^12.0.2",
+    "source-map-support": "^0.5.8",
     "supertest": "^3.0.0",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
